ver 0.35 - Fixed colors for Dark Mode.

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   margin: auto;
-  background-color: rgba(0, 255, 0, 0.05);
+  background-color: var(--colorBackplate);
   box-shadow: 5px 5px 0 0 var(--colorShadow);
   border: solid 2px var(--colorBorder);
 }
